
  [ Colin Watson ]
  * Appease -Wunused-but-set-variable warning.
  * Fix fd leak in ethtool-lite.
  * Fix file handle leak in no_default_route's Hurd case.
  * Assign NETCFG_VERSION and NETCFG_BUILD_DATE using := rather than =; this
    is more efficient, and also avoids inconsistent build times being
    reported in the case where the build crossed a minute boundary.

  [ Wouter Verhelst ]
  * Move 50release-dhcp-lease to 97release-dhcp-lease, so that the
    network isn't brought down before the target is unmounted, which
    breaks installing to a network target such as NBD.

 -- Wouter Verhelst <wouter@debian.org>  Thu, 30 Jun 2011 17:25:58 +0200

netcfg (1.63) unstable; urgency=low

  * If BOOTIF= is set on the Linux command line, look for an interface with
    that address and use it by default (closes: #615600, LP: #56679).

  [ Updated translations ]
  * Asturian (ast.po) by MAAC
  * German (de.po) by Holger Wansing
  * Italian (it.po) by Milo Casagrande

 -- Colin Watson <cjwatson@debian.org>  Thu, 16 Jun 2011 18:03:01 +0100

netcfg (1.62) unstable; urgency=low

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * German (de.po) by Holger Wansing
  * Esperanto (eo.po) by Felipe Castro
  * Estonian (et.po) by Mattias Põldaru
  * Bokmål, Norwegian (nb.po) by Hans Fredrik Nordhaug
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Ivan Masár
  * Swedish (sv.po) by Daniel Nylander
  * Uyghur (ug.po) by Sahran
  * Simplified Chinese (zh_CN.po) by YunQiang Su

 -- Christian Perrier <bubulle@debian.org>  Sat, 23 Apr 2011 11:39:38 +0200

netcfg (1.61) unstable; urgency=low

  [ Konstantinos Margaritis]
  * Added armhf in arch field. Closes: #605013.

  [ Robert Edmonds ]
  * Wait for the network to be usable before trying to use it
    (in the case of STP-enabled switch for instance
    Use busybox's arping with the '-f' flag (quit on first ARP reply).  