@@ -47,6 +47,7 @@
 #include <ifaddrs.h>
 
 #ifdef __linux__
+#include <netpacket/packet.h>
 #define SYSCLASSNET "/sys/class/net/"
 #endif /* __linux__ */
 
@@ -471,13 +472,11 @@ FILE *file_open(char *path, const char *opentype)
     }
 }
 
-const char *find_bootif_iface(int num_interfaces, char **ifs)
+static char *get_bootif(void)
 {
 #ifdef __linux__
 #define PROC_CMDLINE "/proc/cmdline"
-#define ADDRESS_LEN 17 /* aa:bb:cc:dd:ee:ff */
 
-    int i;
     FILE *cmdline_file;
     char *cmdline = NULL;
     size_t dummy;
@@ -506,7 +505,7 @@ const char *find_bootif_iface(int num_interfaces, char **ifs)
 
             s += sizeof("BOOTIF=") - 1;
             bootif_len = strcspn(s, " ");
-            if (bootif_len != ADDRESS_LEN + 3)
+            if (bootif_len != (ETH_ALEN * 3 - 1) + 3)
                 continue;
             bootif = strndup(s + 3, bootif_len - 3); /* skip hardware type */
             for (subst = bootif; *subst; subst++)
@@ -517,54 +516,117 @@ const char *find_bootif_iface(int num_interfaces, char **ifs)
         s++;
     }
 
-    if (!bootif) {
-        di_info("Could not find valid BOOTIF= entry in " PROC_CMDLINE);
-        free(cmdline);
-        fclose(cmdline_file);
-        return NULL;
-    }
-
     free(cmdline);
     fclose(cmdline_file);
 
-    /* Look for an interface matching BOOTIF. */
+    if (!bootif)
+        di_info("Could not find valid BOOTIF= entry in " PROC_CMDLINE);
 
-    for (i = 0; i < num_interfaces; i++) {
-        size_t len;
-        char *kobj;
-        FILE *kobj_file;
-        char address[ADDRESS_LEN + 1];
+    return bootif;
 
-        len = strlen(SYSCLASSNET) + strlen(ifs[i]) + strlen("/address") + 1;
-        kobj = malloc(len);
-        snprintf(kobj, len, SYSCLASSNET "%s/address", ifs[i]);
-        kobj_file = file_open(kobj, "r");
-        if (!kobj_file)
-            goto next;
-        if (!fgets(address, ADDRESS_LEN + 1, kobj_file))
-            goto next;
-        if (strncmp(address, bootif, ADDRESS_LEN) == 0) {
-            di_info("Found interface %s with BOOTIF address %s",
-                    ifs[i], bootif);
-            fclose(kobj_file);
-            free(kobj);
-            free(bootif);
-            return ifs[i];
+#undef PROC_CMDLINE
+#else /* !__linux__ */
+    return NULL;
+#endif /* __linux__ */
+}
+
+static unsigned char *parse_bootif(const char *bootif, int quiet)
+{
+    int i;
+    const char *s;
+    unsigned char *bootif_addr = malloc(ETH_ALEN);
+
+    /* Parse supplied address. */
+    for (i = 0, s = bootif; i < ETH_ALEN && s; i++) {
+        unsigned long bootif_byte;
+
+        errno = 0;
+        bootif_byte = strtol(s, (char **) &s, 16);
+        if (errno || bootif_byte >= 256) {
+            if (!quiet)
+                di_error("couldn't parse link-layer address '%s'", bootif);
+            free(bootif_addr);
+            return NULL;
         }
-
-next:
-        fclose(kobj_file);
-        free(kobj);
+        bootif_addr[i] = (unsigned char) bootif_byte;
+        if (i < ETH_ALEN - 1 && *s++ != ':') {
+            if (!quiet)
+                di_error("couldn't parse link-layer address '%s'", bootif);
+            free(bootif_addr);
+            return NULL;
+        }
     }
 
-    di_error("Could not find any interface with address %s", bootif);
-    free(bootif);
+    return bootif_addr;
+}
 
-#undef ADDRESS_LEN
-#undef PROC_CMDLINE
-#endif /* __linux__ */
+static char *find_bootif_iface(const char *bootif,
+                               const unsigned char *bootif_addr)
+{
+    struct ifaddrs *ifap, *ifa;
+    char *ret = NULL;
 
-    return NULL;
+    /* TODO: this won't work on the Hurd as getifaddrs doesn't return
+     * unconfigured interfaces.  See comment to get_all_ifs.
+     */
+    if (getifaddrs(&ifap) < 0) {
+        di_error("getifaddrs failed: %s", strerror(errno));
+        return NULL;
+    }
+
+    for (ifa = ifap; ifa; ifa = ifa->ifa_next) {
+#if defined(__FreeBSD_kernel__)
+        struct sockaddr_dl *sdl;
+#else
+        struct sockaddr_ll *sll;
+#endif
+
+        if (ifa->ifa_flags & IFF_LOOPBACK)
+            continue;
+#if defined(__linux__)
+        if (!strncmp(ifa->ifa_name, "sit", 3))  /* ignore tunnel devices */
+            continue;
+#endif
+#if defined(WIRELESS)
+        if (is_raw_80211(ifa->ifa_name))
+            continue;
+#endif
+#if defined(__FreeBSD_kernel__)
+        if (ifa->ifa_addr->sa_family != AF_LINK)
+            continue;
+        sdl = (struct sockaddr_dl *) ifa->ifa_addr;
+        if (!sdl)                               /* no link-layer address */
+            continue;
+        if (sdl->sdl_alen != ETH_ALEN)          /* not Ethernet */
+            continue;
+        if (memcmp(bootif_addr, LLADDR(sdl), ETH_ALEN) != 0)
+            continue;
+#else
+        if (ifa->ifa_addr->sa_family != AF_PACKET)
+            continue;
+        sll = (struct sockaddr_ll *) ifa->ifa_addr;
+        if (!sll)                               /* no link-layer address */
+            continue;
+        if ((sll->sll_hatype != ARPHRD_ETHER &&
+             sll->sll_hatype != ARPHRD_IEEE802) ||
+            sll->sll_halen != ETH_ALEN)         /* not Ethernet */
+            continue;
+        if (memcmp(bootif_addr, sll->sll_addr, ETH_ALEN) != 0)
+            continue;
+#endif
+
+        di_info("Found interface %s with link-layer address %s",
+                ifa->ifa_name, bootif);
+        ret = strdup(ifa->ifa_name);
+        break;
+    }
+
+    freeifaddrs(ifap);
+
+    if (!ret)
+        di_error("Could not find any interface with address %s", bootif);
+
+    return ret;
 }
 
 void netcfg_die(struct debconfclient *client)
@@ -592,7 +654,8 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
     size_t len;
     int ret, i, asked;
     int num_interfaces = 0;
-    const char *bootif;
+    unsigned char *bootif_addr;
+    char *bootif_iface = NULL;
     char *ptr = NULL;
     char *ifdsc = NULL;
     char *old_selection = NULL;
@@ -610,20 +673,47 @@ int netcfg_get_interface(struct debconfclient *client, char **interface,
 
     num_interfaces = get_all_ifs(1, &ifs);
 
-    /* If BOOTIF is set and matches an interface, override any provided
-     * default from link detection. */
-    bootif = find_bootif_iface(num_interfaces, ifs);
-    if (bootif)
-        defif = bootif;
+    /* Remember old interface selection, in case it's preseeded. */
+    debconf_get(client, "netcfg/choose_interface");
+    old_selection = strdup(client->value);
+
+    /* If netcfg/choose_interface is preseeded to a link-layer address in
+     * the form aa:bb:cc:dd:ee:ff, or if BOOTIF is set and matches an
+     * interface, override any provided default from link detection. */
+    bootif_addr = parse_bootif(old_selection, 1);
+    if (bootif_addr) {
+        bootif_iface = find_bootif_iface(old_selection, bootif_addr);
+        if (bootif_iface) {
+            free(old_selection);
+            old_selection = strdup(bootif_iface);
+        }
+        free(bootif_addr);
+    } else {
+        char *bootif = get_bootif();
+        if (bootif) {
+            bootif_addr = parse_bootif(bootif, 0);
+            if (bootif_addr) {
+                bootif_iface = find_bootif_iface(bootif, bootif_addr);
+                free(bootif_addr);
+            }
+            free(bootif);
+        }
+    }
+    if (bootif_iface) {
+        /* Did we actually get back an interface we know about? */
+        for (i = 0; i < num_interfaces; i++) {
+            if (strcmp(ifs[i], bootif_iface) == 0) {
+                defif = ifs[i];
+                break;
+            }
+        }
+        free (bootif_iface);
+    }
 
     /* If no default was provided, use the first in the list of interfaces. */
     if (! defif && num_interfaces > 0) {
         defif=ifs[0];
     }
-
-    /* Remember old interface selection, in case it's preseeded. */
-    debconf_get(client, "netcfg/choose_interface");
-    old_selection = strdup(client->value);
 
     for (i = 0; i < num_interfaces; i++) {
         size_t newchars;
